--- a/css/styles-contacts.css
+++ b/css/styles-contacts.css
@@ -23,6 +23,9 @@
 	white-space: nowrap;
 	cursor: pointer;
 }
+#contacts-list .row:hover {
+	background-color: White;
+}
 
 #contacts-panel [class^=col-] {
 	padding: 10px 0 10px 0;
@@ -30,6 +33,10 @@
 	border: 1px solid rgba(86,61,124,.2);
 }
 
+.delete-contact{
+	padding: 10px;
+	position: absolute;
+}
 .delete-contact:hover {
 	color: Red;
 }
