style: let left border of contacts list with not been cut.

--- a/css/styles-contacts.css
+++ b/css/styles-contacts.css
@@ -14,7 +14,9 @@
 }
 
 #contacts-panel {
-	text-align: left;
+	height: 700px;
+	overflow-y: scroll;
+	padding: 0 16px 0 16px;
 }
 
 #contacts-list div[class^=col-] {
