--- a/css/styles.css
+++ b/css/styles.css
@@ -55,3 +55,15 @@ body {
 #p-c-add {
 	display: none;
 }
+
+#message-sm {
+	top: 1em;
+	left: 50%;
+	overflow: hidden;
+	position: fixed;
+	opacity: 0.8;
+	z-index: 1050;
+	background-color: YELLOW;
+	transform: translate(-50%, -50%);
+	padding: 0.5em 1em;
+}
