--- a/css/styles.css
+++ b/css/styles.css
@@ -18,14 +18,27 @@ body {
 	display: none;
 }
 
-.form-signin {
+.form-user {
 	max-width: 350px;
 	padding: 15px;
 	margin: 0 auto;
 }
 
+.form-user {
+	max-width: 350px;
+	padding: 15px;
+	margin: 0 auto;
+}
+
+.form-user button{
+	margin-top: 5px;
+}
+
+#signup-form input{
+	margin: 1px 0 8px 0;
+}
+
 #signin-error-panel{
-	display: none;
 }
 
 .head-operations {
