--- a/css/styles.css
+++ b/css/styles.css
@@ -92,19 +92,50 @@ body {
 
 #profile-face-thumb {
     background-color: white;
-}
-
-#upload-profile-face {
-    cursor: pointer;
-    text-align: center;
-    background-color: black;
+    width: 160px;
+    height: 160px;
 }
 
 .float-status {
+    position: absolute;
+    top: 125px;
+    height: 35px;
+    width: 160px;
+}
+
+#upload-face-img {
+    height: 35px;
+    width: 160px;
+    cursor: pointer;
+}
+
+#upload-face-img *{
+    cursor: pointer;
+}
+
+#upload-face-img input {
+    opacity: 0;
     width: 160px;
     height: 35px;
     position: absolute;
-    top: 125px;
-    padding: 7px;
+    left: 0;
+    bottom: 0;
+}
+
+#upload-face-img .glyphicon-upload {
+    font-size: 22px;
+    padding: 5px;
     opacity: 0.5;
+}
+
+.float-buttom {
+    font-size: 15px;
+    position: relative;
+    top: -32px;
+    height: 35px;
+    width: 160px;
+    background: black;
+    opacity: 0.0;
+    color: white;
+    padding: 6px 0 0 34px;
 }
