--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,10 @@ body {
 	display: none;
 }
 
+div.left{
+	float: left;
+}
+
 .form-user {
 	max-width: 350px;
 	padding: 15px;
@@ -149,4 +153,7 @@ body {
     word-wrap: break-word;
     display: block;
 }
+
+#assets-form {
+
 }
